Fix (?) home page flag line width being bad on mobile, try updating browser tests

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -74,6 +74,7 @@
 
 .flag {
   transform: translate(0, -10%);
+  width: 100%;
   margin: 0;
 }
 
